--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "4.3.1",
     "css-hot-loader": "1.3.6",
     "css-loader": "0.28.9",
@@ -21,6 +24,7 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "2.30.1",
     "node-sass": "^4.9.0",
+    "regenerator-runtime": "^0.12.1",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "source-list-map": "2.0.0",
