--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.7",
+    "cors": "^2.8.5",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
@@ -46,6 +47,7 @@
     "react-chartjs-2": "2.7.0",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
+    "react-select": "^2.1.2",
     "react-toastify": "^4.4.0",
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-beta",
